@@ -9,8 +9,9 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Delegate for determining whether an accelerator can activate a
+    particular widget; see <see cref="E:Gtk.Widget.AccelCanActivate"/></summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
