@@ -3975,9 +3975,12 @@ Widgets are required to honor the size allocation they receive; a size request i
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <summary>
+	  This property determines whether the widget will be affected by 
+	  <see cref="M:Gtk.Widget.ShowAll"/> and <see cref="M:Gtk.Widget.HideAll"/>.
+	</summary>
+        <returns>a <see cref="T:System.Boolean" />, true if the widget should be affected</returns>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="AccelCanActivate">
       <MemberSignature Language="C#" Value="public event Gtk.AccelCanActivateHandler AccelCanActivate;" />
@@ -3987,8 +3990,12 @@ Widgets are required to honor the size allocation they receive; a size request i
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>
+	  This signal is present to allow applications and derived
+	  widgets to override the default Gtk.Widget handling
+	  for determining whether an accelerator can be activated.
+	</summary>
+        <remarks>See <see cref="M:Gtk.Widget.OnAccelCanActivate"/> for more details.</remarks>
       </Docs>
     </Member><Member MemberName="OnAccelCanActivate">
       <MemberSignature Language="C#" Value="protected virtual bool OnAccelCanActivate (uint signal_id);" />
@@ -4000,10 +4007,14 @@ Widgets are required to honor the size allocation they receive; a size request i
         <Parameter Name="signal_id" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="signal_id">a <see cref="T:System.UInt32" /></param>
-        <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <summary>
+	  Method fired when the <see cref="E:Gtk.Widget.AccelCanActivate"/>
+	  event happens; override this for additional functionality.
+	</summary>
+        <param name="signal_id">a <see cref="T:System.UInt32" />, a signal ID</param>
+        <returns>a <see cref="T:System.Boolean" />, true if the accelerator can be activated.</returns>
+        <remarks>
+	</remarks>
       </Docs>
     </Member><Member MemberName="Draw">
       <MemberSignature Language="C#" Value="public void Draw (Gdk.Rectangle area);" />
@@ -4015,9 +4026,17 @@ Widgets are required to honor the size allocation they receive; a size request i
         <Parameter Name="area" Type="Gdk.Rectangle" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Deprecated.</summary>
         <param name="area">a <see cref="T:Gdk.Rectangle" /></param>
-        <remarks>To be added</remarks>
+        <remarks>
+	  In GTK+ 1.2, this function would immediately render the
+	  region <paramref name="area"/> of a widget, by invoking the virtual draw method of a
+	  widget. In GTK+ 2.0, this method simply invalidates the specified region of the
+	  widget, then updates the invalid region of the widget immediately.
+	  Usually you don't want to update the region immediately for
+	  performance reasons, so in general <see cref="M:Gtk.Widget.QueueDrawArea"/> is
+	  a better choice if you want to draw a region of a widget.
+	</remarks>
       </Docs>
     </Member><Member MemberName="QueueClearArea">
       <MemberSignature Language="C#" Value="public void QueueClearArea (int x, int y, int width, int height);" />
@@ -4037,7 +4056,7 @@ Widgets are required to honor the size allocation they receive; a size request i
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="AddMnemonicLabel">
       <MemberSignature Language="C#" Value="public void AddMnemonicLabel (Gtk.Widget label);" />
@@ -4051,7 +4070,7 @@ Widgets are required to honor the size allocation they receive; a size request i
       <Docs>
         <summary>To be added</summary>
         <param name="label">a <see cref="T:Gtk.Widget" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="SetUposition">
       <MemberSignature Language="C#" Value="public void SetUposition (int x, int y);" />
@@ -4067,7 +4086,7 @@ Widgets are required to honor the size allocation they receive; a size request i
         <summary>To be added</summary>
         <param name="x">a <see cref="T:System.Int32" /></param>
         <param name="y">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="QueueClear">
       <MemberSignature Language="C#" Value="public void QueueClear ();" />
@@ -4078,7 +4097,7 @@ Widgets are required to honor the size allocation they receive; a size request i
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="SetUsize">
       <MemberSignature Language="C#" Value="public void SetUsize (int width, int height);" />
@@ -4094,7 +4113,7 @@ Widgets are required to honor the size allocation they receive; a size request i
         <summary>To be added</summary>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="QueueResizeNoRedraw">
       <MemberSignature Language="C#" Value="public void QueueResizeNoRedraw ();" />
@@ -4105,7 +4124,7 @@ Widgets are required to honor the size allocation they receive; a size request i
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="ListMnemonicLabels">
       <MemberSignature Language="C#" Value="public GLib.List ListMnemonicLabels ();" />
@@ -4117,7 +4136,7 @@ Widgets are required to honor the size allocation they receive; a size request i
       <Docs>
         <summary>To be added</summary>
         <returns>a <see cref="T:GLib.List" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="CanActivateAccel">
       <MemberSignature Language="C#" Value="public bool CanActivateAccel (uint signal_id);" />
@@ -4129,10 +4148,19 @@ Widgets are required to honor the size allocation they receive; a size request i
         <Parameter Name="signal_id" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="signal_id">a <see cref="T:System.UInt32" /></param>
-        <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <summary>
+	  Determines whether an accelerator that activates the signal
+	  identified by <paramref name="signal_id"/> can currently be activated.
+	</summary>
+        <param name="signal_id">a <see cref="T:System.UInt32" />, a signal ID (XXX: API: should this really work this way?)</param>
+        <returns>a <see cref="T:System.Boolean" />, true if the accelerator can be activated.</returns>
+        <remarks>
+	  This is done by emitting the <see cref="E:Gtk.Widget.CanActivateAccel"/>
+	  signal on the widget; if the signal isn't overridden by a
+	  handler or in a derived widget, then the default check is
+	  that the widget must be sensitive, and the widget and all
+	  its ancestors mapped.
+	</remarks>
       </Docs>
     </Member><Member MemberName="RemoveMnemonicLabel">
       <MemberSignature Language="C#" Value="public void RemoveMnemonicLabel (Gtk.Widget label);" />
@@ -4146,7 +4174,7 @@ Widgets are required to honor the size allocation they receive; a size request i
       <Docs>
         <summary>To be added</summary>
         <param name="label">a <see cref="T:Gtk.Widget" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member><Member MemberName="CreateNativeObject">
       <MemberSignature Language="C#" Value="protected override void CreateNativeObject (string [] names, GLib.Value[] vals);" />
